# vault-graph

./: .gitignore  AGENTS.md  LICENSE  README.md  open-docs.sh  publish.sh  pyproject.toml
.github/: release.yml
.github/workflows/: ci.yml  prepare-release.yml  publish-pypi.yml  publish-testpypi.yml
configs/: vaults.yaml
docs/: CONVENTIONS.md  DECISIONS.md  DESIGN.md  FEATURES.md  PATCH_LOG.md  PUBLISHING.md  SEARCH_ARCHITECTURE.md  SPEC.md  TODO.md  USER_DECISION.md
docs/stenc/: .gitignore
docs/stenc/content/: site.json
docs/superpowers/plans/: 2026-06-05-phase-1-vault-catalog-metadata.md  2026-06-08-phase-2a-retrieval-contract-vectorstore-boundary.md  2026-06-08-phase-2b-local-vector-indexing.md  2026-06-09-phase-2c-evidence-first-keyword-vector-search.md  2026-06-10-phase-3a-graphstore-contract-readiness.md  2026-06-11-phase-3b-local-entity-relationship-indexing.md  2026-06-11-phase-3c-graph-projection-retrieval.md  2026-06-12-phase-4a-context-pack-contract-builder-boundary.md  2026-06-12-phase-4b-local-context-pack-assembly-rendering.md  2026-06-15-phase-5a-mcp-server-foundation-stdio.md  2026-06-17-phase-5b-mcp-resources-context-pack-resources.md  2026-06-18-phase-5c-mcp-tools-prompts-agent-workflows-ko.md  2026-06-19-phase-6a-result-explanation-contract.md  (+7 more)
src/vault_graph/: errors.py
tests/: __init__.py  conftest.py  test_acceptance_success_criteria.py  test_answer_composer.py  test_answer_import_boundaries.py  test_answer_plan_contract.py  test_answer_renderer.py  test_answer_response_contract.py  test_answer_service.py  test_app_search_readiness_service.py  test_chroma_vector_store.py  test_citation_guard.py  test_cli_ask.py  test_cli_catalog_metadata.py  test_cli_context.py  test_cli_decision_trace.py  test_cli_graph_indexing.py  test_cli_graph_status.py  test_cli_mcp_config.py  test_cli_mcp_serve.py  test_cli_phase_1.py  test_cli_related.py  test_cli_search.py  test_cli_setup.py  test_cli_surface_boundary.py  test_cli_vector_indexing.py  test_cli_watch.py  test_context_pack_builder.py  test_context_pack_contract.py  test_context_pack_docs_contract.py  test_context_pack_evidence_budget.py  test_context_pack_import_boundaries.py  test_context_pack_read_only_boundary.py  test_context_pack_renderer.py  test_context_pack_resource_cache.py  test_context_pack_serialization.py  test_context_pack_warnings.py  test_decision_memory_service.py  test_document_normalizer.py  test_entity_extractor.py  (+86 more)
tests/fakes/: __init__.py  deterministic_text_embeddings.py  in_memory_graph_store.py  in_memory_keyword_index.py  in_memory_vector_store.py  search_readiness.py
(+178 files in other folders)
