[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "vault-graph"
version = "0.1.2"
description = "Read-only, rebuildable knowledge access layer over Vault."
readme = "README.md"
authors = [{ name = "Jun Hyoung Lee" }]
license = "MIT"
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing :: Indexing",
]
dependencies = [
  "PyYAML>=6.0.2",
  "chromadb>=1.5.9,<2.0",
  "fastembed>=0.8.0,<1.0",
  "fastapi>=0.115,<1",
  "huggingface-hub>=0.31,<1.0",
  "mcp>=1.27,<2",
  "rustworkx>=0.17,<1.0",
  "typer>=0.12.5",
  "uvicorn>=0.30,<1",
]

[dependency-groups]
dev = [
  "mypy>=1.11",
  "pytest>=8.3",
  "ruff>=0.6",
  "types-PyYAML>=6.0.12",
]

[project.scripts]
vg = "vault_graph.cli.main:app"

[project.urls]
Homepage = "https://github.com/cutehackers/vault-graph"
Repository = "https://github.com/cutehackers/vault-graph"
Issues = "https://github.com/cutehackers/vault-graph/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/vault_graph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/vault_graph/cli/main.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_decorators = false
mypy_path = "src"
